# UH-INF-StrategicGame

./: .gitignore  .project  .travis.yml  CMakeLists - Kopie.txt  CMakeLists.txt  README.md  test.cpp
client/: CArea.cpp  CArea.h  CCamera.cpp  CCamera.h  CEvent.cpp  CEvent.h  CMakeLists.txt  CMap.cpp  CMap.h  CSurface.cpp  CSurface.h  CTile.cpp  CTile.h  ClientGameLogic.cpp  Define.h  GameClient.cpp  GameClient.h  GameClientBackend.cpp  GameClientBackend.h  GameUI.cpp  GameUI.h  HandleIncommingData.cpp  NetworkBackend.cpp  OnCleanup.cpp  OnEvent.cpp  OnInit.cpp  OnLoop.cpp  OnRender.cpp  Timer.cpp  Timer.h
gamemodel/: CMakeLists.txt  GameAction.cpp  GameAction.h  GameEntity.cpp  GameEntity.h  GameMap.cpp  GameMap.h  GameMapServer.cpp  GameMapServer.h  GameRessource.cpp  GameRessource.h  GameState.cpp  GameState.h  Player.cpp  Player.h  Player.h.orig  model.cpp
gamemodel/actions/: AAttack.cpp  AAttack.h  ABuild.cpp  ABuild.h  ALogIn.cpp  ALogIn.h  AMove.cpp  AMove.h  ARecruit.cpp  ARecruit.h  ASetAP.cpp  ASetAP.h  ASetTurn.cpp  ASetTurn.h
gamemodel/entities/: EArmy.cpp  EArmy.h  EBuilding.cpp  EBuilding.h  ELocation.cpp  ELocation.h  EPawn.cpp  EPawn.h  EPlace.cpp  EPlace.h  ETroops.cpp  ETroops.h  EUnit.cpp  EUnit.h
gamemodel/entities/buildings/: EBank.cpp  EBank.h  ECasern.cpp  ECasern.h  EFence.cpp  EFence.h  EMarket.cpp  EMarket.h  EMine.cpp  EMine.h  ERidge.cpp  ERidge.h  EStable.cpp  EStable.h  ETheatre.cpp  ETheatre.h  ETower.cpp  ETower.h  EWall.cpp  EWall.h
gamemodel/entities/places/: ECamp.cpp  ECamp.h  EFortress.cpp  EFortress.h  ELargeTown.cpp  ELargeTown.h  EMetropolis.cpp  EMetropolis.h  EProvincialTown.cpp  EProvincialTown.h  ESettlement.cpp  ESettlement.h
gamemodel/entities/units/: EArcher.cpp  EArcher.h  EBallista.cpp  EBallista.h  EBatteringRam.cpp  EBatteringRam.h  ECanon.cpp  ECanon.h  ECatapult.cpp  ECatapult.h  ECavalry.cpp  ECavalry.h  EInfantry.cpp  EInfantry.h  EPawn.cpp  EPawn.h  EPikeman.cpp  EPikeman.h  ESiegeTower.cpp  ESiegeTower.h
gamemodel/ressources/: RMoney.cpp  RMoney.h  ROre.cpp  ROre.h  RWood.cpp  RWood.h
gamemodel/utils/: CMakeLists.txt  coordinates.cpp  coordinates.h  count.cpp  count.h  counter.h
network/: CMakeLists.txt  CMakeLists.txt.orig  ClientNetwork.cpp  ClientNetwork.cpp.orig  ClientNetwork.h  GameNetwork.cpp  GameNetwork.h  NetworkMessage.cpp  NetworkMessage.h  ServerNetwork.cpp  ServerNetwork.cpp.orig  ServerNetwork.h  constants.h
network/client/: ClientNetworkImpl.cpp  ClientNetworkImpl.h
network/messages/: GameMetaMessage.cpp  GameMetaMessage.h  GameStateMessage.cpp  GameStateMessage.h  message_types.h
network/messages/metamessages/: MMTest.cpp  MMTest.h
network/messages/statemessages/: SMBattleResult.cpp  SMBattleResult.h  SMEndGame.cpp  SMEndGame.h  SMRemoveArmy.cpp  SMRemoveArmy.h  SMSetLocationOwner.cpp  SMSetLocationOwner.h  SMSetStartBase.cpp  SMSetStartBase.h  SMTest.cpp  SMTest.h  SMUpdateActionsLeft.cpp  SMUpdateActionsLeft.h  SMUpdateArmy.cpp  SMUpdateArmy.h  SMUpdateLocationArmy.cpp  SMUpdateLocationArmy.h  SMUpdateRessources.cpp  SMUpdateRessources.h  SMUpdateUUID.cpp  SMUpdateUUID.h
network/server/: NetConnection.h  NetGame.cpp  NetGame.h  NetPlayer.cpp  NetPlayer.h  ServerNetworkImpl.cpp  ServerNetworkImpl.h
server/: CMakeLists.txt  GameContainer.cpp  GameContainer.h  GameEngine.cpp  GameEngine.h  GameLogic.cpp  GameLogic.h  GameMap.cpp  GameMap.h  GameServer.cpp  GameServer.h
test/network/: chat_client.cpp  chat_message.hpp  chat_server.cpp  client.cpp  insertplayer.cpp  serialization.cpp  server.cpp  tmp.cpp
